feat: implement more conversion methods
